--- a/ue02_typescript/assets/liste.html
+++ b/ue02_typescript/assets/liste.html
@@ -5,8 +5,11 @@
     <!-- Kommentare hier -->
   </head>
   <body>
-      <h1>Liste</h1>
+      <h1 style="background-color: yellow; margin-bottom: 30px">Liste</h1>
+      <div style="background-color: turquoise">
     <p>Hier sollte die <b>Liste</b> stehen.</p>
+    <p>Herr <span style="color: red">Rossi</span> sucht das Glück.</p>
+    </div>
     <a href = "https://de.wikipedia.org/wiki/Hypertext_Markup_Language">
         Link zu Wikipedia</a>
     <img src = "image.png"></img>
