--- a/ue02_typescript/assets/liste.html
+++ b/ue02_typescript/assets/liste.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Meta Tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>FIVU Liste</title>
     <!-- Kommentare hier -->
   </head>
@@ -12,6 +17,7 @@
     </div>
     <a href = "https://de.wikipedia.org/wiki/Hypertext_Markup_Language">
         Link zu Wikipedia</a>
-    <img src = "image.png"></img>
+    <img src = "image.jpg"></img>
+    <button type="button" class = "btn btn-primary">Nicht drücken!</button>
   </body>
 </html>
