--- a/ue02_typescript/assets/login.html
+++ b/ue02_typescript/assets/login.html
@@ -12,14 +12,14 @@
   <body>
         <div class="container">
             <h4 class="mt-5">Login:</h4>
-            <form class="form-signin" method="POST">
+            <form class="form-signin" method="post">
                     <label for="inputEmail" class="sr-only">Email address</label>
                     <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
                     <label for="inputPassword" class="sr-only">Password</label>
                     <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
                     <div class="checkbox">
                       <label>
-                        <input type="checkbox" value="remember-me"> Remember me
+                        <input name="stayloggedin" type="checkbox" value="remember-me"> Remember me
                       </label>
                     </div>
                     <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
